Fixed flex wrapping, update README.md

--- a/src/App.css
+++ b/src/App.css
@@ -5,4 +5,5 @@
   width: 100%;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
