--- a/src/EventsView/EventsView.css
+++ b/src/EventsView/EventsView.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   width: 500px;
+  align-items: center;
 }
 
 .event {
